K1J-1253: Filter out duplicate issuer types from CertificateService and Webcert, ensuring case and space insensitivity